# agent-template-document-intel-advanced

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  app.py  contributing.md  docker-compose.yml  good-readme.md  log_config.yaml  pyproject.toml  setup.md  setup.sh  usage.md
api/: __init__.py
api/client/: README.md  amazon_bedrock.py
api/exceptions/: README.md  custom_exceptions.py  error_codes.py
api/middleware/: README.md  auth_middleware.py
api/routers/: README.md  agents.py  audit.py  auth.py  check_uploads_task.py  documents.py  emails.py  private_search.py  teams.py  users.py
api/schemas/: README.md  agents.py  audit.py  auth.py  check_upload_task.py  documents.py  emails.py  llm.py  private_search.py  team.py  users.py
api/templates/: README.md  share_llm_summary_template.html  sync_notification_template.html
api/types/: README.md
api/utils/: README.md  aws_knowledge_base.py  email_utils.py  logging_utils.py  opensearch_util.py
